# FretVision

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  .env.hosted.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  asgi_body_limit.py  asgi_request_id.py  context.py  errors.py  logging.py  main.py  services.py  settings.py
backend/app/api/: health.py  protected.py  sessions.py
backend/app/auth/: __init__.py  auth_server_verifier.py  dependencies.py  factory.py  jwks_verifier.py  models.py  ownership.py  signing_keys.py  verifier.py
backend/app/commands/: __init__.py  ingest_batch.py  start_session.py
backend/app/db/: __init__.py  database.py  pool.py
backend/app/domain/: __init__.py  batches.py  idempotency.py  profiles.py  sessions.py
backend/app/repositories/: __init__.py  batches.py  idempotency.py  profiles.py  sessions.py
backend/tests/: conftest.py  test_auth_dependency.py  test_auth_jwks.py  test_auth_server.py  test_batches_domain.py  test_batches_repository.py  test_db_integration.py  test_errors.py  test_health_unit.py  test_idempotency_repository.py  test_ingest_batch_api.py  test_ingest_batch_handler.py  test_ingest_batch_idempotency.py  test_ingest_batch_integration.py  test_ownership.py  test_profiles.py  test_profiles_integration.py  test_request_id.py  test_sessions_api.py  test_sessions_repository.py  test_settings.py  test_start_session_domain.py  test_start_session_handler.py  test_start_session_integration.py
docs/: PROJECT_STATUS.md
(+31 files in other folders)
