[project]
name = "fretvision-backend"
version = "0.1.0"
description = "FretVision FastAPI backend — Phase 2 Step 1 foundation."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "asgi-lifespan>=2.1",
    "ruff>=0.7",
    "mypy>=1.13",
]

# Application layout (not a publishable library): the package lives at ./app,
# so there is nothing for the build backend to install for the project itself.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Default runs exclude integration tests; run them explicitly with `-m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: tests that require a live database via TEST_DATABASE_URL",
]
